--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@gsap/react": "^2.1.2",
     "@tailwindcss/postcss": "^4.1.16",
     "gsap": "^3.13.0",
+    "lenis": "^1.3.14",
     "lucide-react": "^0.552.0",
     "next": "16.0.1",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-responsive": "^10.0.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.16"
   },
