--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/postcss": "^4.1.16",
     "gsap": "^3.13.0",
     "lenis": "^1.3.14",
